# hedon-bot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  config.template.yml  log4rs.yml
fixtures/: atom.xml  redis_feed.xml  rust_blog.xml  rust_inside_blog.xml
src/: atom.rs  chatgpt.rs  conf.rs  cron_task.rs  feishu_bot.rs  go_weekly.rs  lib.rs  log.rs  main.rs  redis_base.rs  redis_blog.rs  rss.rs
src/channels/: go_blog.rs  go_weekly.rs  mod.rs  redis_blog.rs  rust_blog.rs  rust_inside_blog.rs
src/content_feed/: feed.rs  mod.rs
src/feeds/: atom.rs  mod.rs  rss.rs
tests/: item_description.xml
