[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
regex = "1.10.4"
reqwest = "0.12.4"
scraper = "0.19.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
