[package]
name = "hedon-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
log = "0.4.21"
log4rs = "1.3.0"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
redis = "0.25.3"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
scraper = "0.19.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_derive = "1.0.202"
serde_json = "1.0.117"
serde_yml = "0.0.7"
tokio = { version = "1.37.0", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
